<resources>
    <string name="app_name">Štediša</string>
    <string name="splash_text_1">Vaš odgovor na vječno pitanje:</string>
    <string name="splash_text_2">gdje mi je nestao novac?</string>
    <string name="welcome">Dobrodošli!</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="authors">Autori:</string>
    <string name="names">Karmela Slišković\nJosip Tomić\nJasmin Vučelj\n</string>
    <string name="course">Predmet:</string>
    <string name="course_name">Interakcija čovjeka i \nračunala\n</string>
    <string name="college">Fakultet:</string>
    <string name="college_name">FER\n</string>
    <string name="costs">Troškovi</string>
    <string name="incomes">Prihodi</string>
    <string name="currencies">Valute</string>
    <string name="stats">Statistika</string>
    <string name="categories">Kategorije</string>
    <string name="settings">Postavke</string>
    <string name="about">O aplikaciji</string>
    <string name="language">Jezik:</string>
    <string name="currency">Valuta:</string>
    <string name="auto_add_salary">Automatsko dodavanje plaće</string>
    <string name="paycheck_date">Dan isplate plaće:</string>
    <string name="period">Razdoblje:</string>
    <string name="sharedPrefsFileName">SharedPrefs</string>
    <string-array name="currency_array">
        <item>HRK</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string-array name="language_array">
        <item>Hrvatski</item>
        <item>English</item>
    </string-array>
    <string-array name="date_day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="period_array">
        <item>Dan</item>
        <item>Tjedan</item>
        <item>Mjesec</item>
        <item>Godina</item>
    </string-array>
    <string name="title_activity_costs">CostsActivity</string>
    <string name="costs_label">Mjesečni troškovi</string>
    <string name="title_activity_add_cost">AddCostActivity</string>
    <string name="title_activity_cost_details">CostDetailsActivity</string>
    <string name="new_cost">Novi trošak</string>
    <string name="new_income">Novi prihod</string>
    <string name="cost_details">Detalji troška</string>
    <string name="income_details">Detalji prihoda</string>
    <string name="title">Naziv:</string>
    <string name="quantity">Količina:</string>
    <string name="category">Kategorija:</string>
    <string name="cancel">Odustani</string>
    <string name="add">Dodaj</string>
    <string name="save">Spremi</string>
    <string name="description">Napomena:</string>
    <string name="edit">Uredi</string>
    <string name="delete">Obriši</string>
    <string name="incomes_label">Mjesečni prihodi</string>
    <string name="title_activity_add_income">AddIncomeActivity</string>
    <string name="title_activity_income_details">IncomeDetailsActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_statistics_details">StatisticsDetails</string>
    <string name="title_activity_edit_cost">EditCostActivity</string>
    <string name="title_activity_edit_income">EditIncomeActivity</string>
    <string name="edit_cost">Uredi trošak</string>
    <string name="edit_income">Uredi prihod</string>
    <string name="total">Ukupno</string>
    <string name="count">Količina</string>
    <string name="average">Prosjek po razdoblju</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="details">Detalji</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="new_category">Nova kategorija</string>
    <string name="type">Tip:</string>
    <string name="icon">Ikona:</string>
    <string-array name="category_type">
        <item>Prihod</item>
        <item>Trošak</item>
    </string-array>
    <string name="title_activity_curencies">CurenciesActivity</string>
    <string name="choose_currency_label">Odaberite valutu za pregled tečaja</string>
    <string name="unit">Jedinica:</string>
    <string name="buyed">Kupovni:</string>
    <string name="selled">Prodajni:</string>
    <string name="middle">Srednji:</string>
</resources>
