<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.stedisa.CreditsActivity">

    <TextView
        android:id="@+id/tvAuthors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/authors"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/tvNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/names"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/tcCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/course"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/tvCourseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/course_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <TextView
        android:id="@+id/tvCollege"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/college"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/tvCollegeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="3sp"
        android:lineSpacingExtra="3sp"
        android:text="@string/college_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
</LinearLayout>