<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.stedisa.StatisticsActivity">
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/statsChart"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </com.github.mikephil.charting.charts.LineChart>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incomes"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/statsTotalIncomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costs"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/statsTotalCosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/statsDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/details"/>
</LinearLayout>
